# nvg-rs

./: Cargo.toml
shaders/: nvgv2.frag  nvgv2.vert
src/: cache.rs  color.rs  core.rs  lib.rs  math.rs
src/context/: align.rs  basic_composite_operation.rs  blend_factor.rs  command.rs  composite_operation.rs  composite_operation_state.rs  context.rs  gradient.rs  image_flags.rs  image_id.rs  image_pattern.rs  line_cap.rs  line_join.rs  mod.rs  paint.rs  path.rs  solidity.rs  state.rs  text_metrics.rs  vertex.rs
src/def/: bounds.rs  mod.rs  point.rs  rect.rs  transform.rs
src/font/: font_data.rs  font_id.rs  fonts.rs  layout_char.rs  mod.rs
src/graphics/: graphic.rs  mod.rs
src/math/: bounds.rs  extent.rs  mod.rs  rect.rs  transform.rs
src/renderer/: mod.rs  renderer.rs  scissor.rs  texture_type.rs
