[package]
name = "nvg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
bitflags = "1.2.1"
anyhow = "*"
rusttype = { version = "0.8.1", features = ["gpu_cache"] }
slab = "*"
image = "0.22.3"
rawpointer = "0.2.1"